dpkg (1.10.26) unstable; urgency=low
  The "Captain Tight-Pants" Release.

  * Fix incorrect claim that 'Q' in dselect quits without saving changes
    (really 'X').
  * Revert to current 'stable' behaviour of Space/Enter/'Q' in the dselect
    help screen, Space leaves the help screen and Enter and 'Q' do nothing.
    It's dangerous to encourage users to press Enter or 'Q' since they
    commit changes in the package selection screen.

  * New Translations (Christian Perrier):
    - Basque (Piarres Beobide Egaña).  Closes: #281245.
      (Was really added in 1.10.24, but forgotten from ALL_LINGUAS.)
    - Bosnian (Safir Šećerović).
    - Slovak (benco).  Closes: #284896, #289341
    - Traditional Chinese (Asho Yeh).  Closes: #287375.
  * Updated Translations (Christian Perrier):
    - Brazilian Portuguese (André Luís Lopes).  Closes: #281228.
    - Catalan (Jordi Mallach).  Closes: #281333.
    - Czech (Miroslav Kure).  Closes: #281231.
    - Danish (Claus Hindsgaul).  Closes: #281103.
    - Dutch (Christian Perrier).  Closes: #282087.
    - Galician (Héctor Fernéndez López).
    - German (Michael Piefel).  Closes: #281503.
    - Italian (Stefano Canepa). Closes: #282543.
    - Japanese (Kenshi Muto).  Closes: #281144.
    - Korean (Changwoo Ryu).  Closes: #282246.
    - Norwegian Nynorsk (Håvard Korsvoll).  Closes: #281456.
    - Polish (Bartosz Feñski).
    - Portuguese (Miguel Figueiredo).  Closes: #281122, #289359.
    - Russian (Yuri Kozlov).  Closes: #281166.
    - Simplified Chinese (Tchaikov, Carlos Liu).
    - Spanish (Javier Fernández-Sanguino Peña).  Closes: #281117.
    - Swedish (Peter Karlsson).  Closes: #281165.

 -- Scott James Remnant <scott@netsplit.com>  Tue, 11 Jan 2005 16:26:51 +0000

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,188 @@
-2004-11-11  gettextize  <bug-gnu-gettext@gnu.org>
+2005-01-11  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* configure.in (AC_OUTPUT): Add po/Makefile.in.
+
+Tue Jan 11 16:33:07 GMT 2005 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Release 1.10.26.
+
+Tue Jan 11 16:23:57 GMT 2005 Scott James Remnant <scott@netsplit.com>
+
+  * po/en.po: Removed dangerously out-of-date English translation,
+  the source is in English so this isn't required.
+  * configure.in: Remove en from ALL_LINGUAS.
+
+Mon Jan 10 06:32:20 CEST 2005 Piarres Beobide Egaña <pi@beobide.net>
+
+  * po/eu.po: Updated
+
+Mon Jan 10 06:28:55 CEST 2005 Jordi Mallach <jordi@debian.org>
+
+  * po/ca.po: Updated Catalan translation.
+
+Sun Jan 09 11:00:43 CEST 2005 Miguel Figueiredo <elmig@debianpt.org>
+
+  * po/pt.po: Updated
+
+Sun Jan 09 07:50:00 CEST 2005 <benco@acid.sk>
+
+  * po/sk.po: Updated
+
+Sat Jan 08 16:03:54 CEST 2005 Havard Korsvoll <korsvoll@skulelinux.no>
+
+  * po/nn.po: Updated
+
+Fri Jan 07 06:30:20 CEST 2005 Bart Cornelis <cobaco@linux.be>
+
+  * po/nl.po: Updated
+
+Fri Jan 07 06:30:20 CEST 2005 Stefano Canepa <sc@linux.it>
+
+  * po/it.po: Updated
+
+Thu Jan 06 20:38:20 CEST 2005 Andre Luis Lopes <andrelop@debian.org>
+
+  * po/pt_BR.po: Updated
+
+Wed Jan 05 20:21:54 CEST 2005 Bartosz Fenski aka fEnIo <fenio@o2.pl>
+
+  * po/pl.po: updated
+
+Mon Jan 03 13:42:54 CEST 2005 Michael Piefel <piefel@debian.org>
+
+  * po/de.po: updated
+
+Sun Jan 02 07:48:43 CEST 2005 Peter Karlsson <peter@softwolves.pp.se>
+
+  * po/sv.po: Updated
+
+Sat Jan 01 22:43:20 CEST 2005 Miroslav Kure <kurem@upcase.inf.upol.cz>
+
+  * po/cs.po: Updated
+
+Sat Jan 01 22:41:43 CEST 2005 Claus Hindsgaul <claus_h@image.dk>
+
+  * po/da.po: Updated
+
+Sat Jan 01 11:31:43 CEST 2005 Yuri Kozlov <yuray@id.ru>
+
+  * po/ru.po: Updated
+
+Fri Dec 31 12:12:43 CEST 2004 Javier Fernandez-Sanguino Pena <jfs@dat.etsit.upm.es>
+
+  * po/es.po: Updated
+
+Fri Dec 31 11:12:43 CEST 2004 Kenshi Muto <kmuto@debian.org>
+
+  * po/ja.po: Updated
+
+Fri Dec 31 07:32:01 BST 2004 Christian Perrier <bubulle@debian.org>
+
+  * po/fr.po: Updated French translation.
+
+Thu Dec 30 18:30:03 GMT 2004 Colin Watson <cjwatson@debian.org>
+
+  * dselect/basecmds.cc: Revert to former Space/Enter/'Q' behaviour, so that
+    Space leaves the help screen and Enter and 'Q' do nothing. It's
+    dangerous to encourage users to press Enter or 'Q', since they commit
+    changes in the package selection screen.
+  * dselect/helpmsgs.cc: Update help text to match.
+
+Thu Dec 30 17:52:09 GMT 2004 Colin Watson <cjwatson@debian.org>
+
+  * dselect/helpmsgs.cc: 'Q' quits and overrides dependency problems;
+    'X' quits without saving changes.
+
+Wed Dec 29 20:34:54 CEST 2004 Christian Perrier <bubulle@debian.org>
+
+  * configure.in: Add eu and sk which were forgotten when these
+  translations were added
+
+Tue Dec 28 21:33:00 CEST 2004 Asho Yeh <asho@ms44.url.com.tw>
+
+  * po/zh_TW.po: Added
+  * configure.in: Added Traditional Chinese to the languages list
+
+Mon Dec 13 17:50:00 CEST 2004 <esafir@yahoo.com>
+
+  * po/bs.po: Added
+  * configure.in: Added Bosnian to the languages list
+
+Mon Dec 13 17:50:00 CEST 2004 <benco@acid.sk>
+
+  * po/sk.po: Updated
+
+Mon Nov 22 23:50:00 CEST 2004 Stefano Canepa <sc@linux.it>
+
+  * po/it.po: Updated
+
+Sun Nov 21 09:05:36 CEST 2004 Changwoo Ryu <cwryu@debian.org>
+
+  * po/ko.po: Updated
+
+Fri Now 19 18:19:54 CEST 2004 Christian Perrier <bubulle@debian.org>
+
+  * po/nl.po: Typo corrected
+
+Tue Nov 16 11:42:54 CEST 2004 Michael Piefel <piefel@debian.org>
+
+  * po/de.po: updated
+
+Tue Nov 16 11:42:54 CEST 2004 Michael Piefel <piefel@debian.org>
+
+  * po/de.po: updated
+
+Tue Nov 16 00:03:54 CEST 2004 Havard Korsvoll <korsvoll@skulelinux.no>
+
+  * po/nn.po: Updated
+
+Mon Nov 15 10:28:55 CEST 2004 Jordi Mallach <jordi@debian.org>
+
+  * po/ca.po: Updated Catalan translation.
+
+Sun Nov 14 19:32:20 CEST 2004 Piarres Beobide Egaña <pi@beobide.net>
+
+  * po/eu.po: Updated
+
+Sun Nov 14 17:41:20 CEST 2004 Miroslav Kure <kurem@upcase.inf.upol.cz>
+
+  * po/cs.po: Updated
+
+Sun Nov 14 14:38:20 CEST 2004 Andre Luis Lopes <andrelop@debian.org>
+
+  * po/pt_BR.po: Updated
+
+Sun Nov 12 13:53:43 CEST 2004 Yuri Kozlov <yuray@id.ru>
+
+  * po/ru.po: Updated
+
+Sun Nov 12 13:48:43 CEST 2004 Peter Karlsson <peter@softwolves.pp.se>
+
+  * po/sv.po: Updated
+
+Sun Nov 12 08:10:43 CEST 2004 Kenshi Muto <kmuto@debian.org>
+
+  * po/ja.po: Updated
+
+Sat Nov 11 23:20:43 CEST 2004 Miguel Figueiredo <elmig@debianpt.org>
+
+  * po/pt.po: Updated
+
+Sat Nov 11 23:18:43 CEST 2004 Claus Hindsgaul <claus_h@image.dk>
+
+  * po/da.po: Updated
+
+Sat Nov 11 23:16:43 CEST 2004 Javier Fernandez-Sanguino Pena <jfs@dat.etsit.upm.es>
+
+  * po/es.po: Updated
+
+Sat Nov 11 23:14:43 CEST 2004 Trorrr [Héctor Fernández] <trorrr@yahoo.es>
+
+  * po/gl.po: Updated
+
+Thu Nov 11 20:18:33 GMT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Bump version to 1.10.26~.
 
 Tue Nov 09 15:23:54 CEST 2004 Christian Perrier <bubulle@debian.org>
 
