--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,41 @@
+dpkg (1.10.26) unstable; urgency=low
+
+  The "Captain Tight-Pants" Release.
+
+  * Fix incorrect claim that 'Q' in dselect quits without saving changes
+    (really 'X').
+  * Revert to current 'stable' behaviour of Space/Enter/'Q' in the dselect
+    help screen, Space leaves the help screen and Enter and 'Q' do nothing.
+    It's dangerous to encourage users to press Enter or 'Q' since they
+    commit changes in the package selection screen.
+
+  * New Translations (Christian Perrier):
+    - Basque (Piarres Beobide Egaña).  Closes: #281245.
+      (Was really added in 1.10.24, but forgotten from ALL_LINGUAS.)
+    - Bosnian (Safir Šećerović).
+    - Slovak (benco).  Closes: #284896, #289341
+    - Traditional Chinese (Asho Yeh).  Closes: #287375.
+  * Updated Translations (Christian Perrier):
+    - Brazilian Portuguese (André Luís Lopes).  Closes: #281228.
+    - Catalan (Jordi Mallach).  Closes: #281333.
+    - Czech (Miroslav Kure).  Closes: #281231.
+    - Danish (Claus Hindsgaul).  Closes: #281103.
+    - Dutch (Christian Perrier).  Closes: #282087.
+    - Galician (Héctor Fernéndez López).
+    - German (Michael Piefel).  Closes: #281503.
+    - Italian (Stefano Canepa). Closes: #282543.
+    - Japanese (Kenshi Muto).  Closes: #281144.
+    - Korean (Changwoo Ryu).  Closes: #282246.
+    - Norwegian Nynorsk (Håvard Korsvoll).  Closes: #281456.
+    - Polish (Bartosz Feñski).
+    - Portuguese (Miguel Figueiredo).  Closes: #281122, #289359.
+    - Russian (Yuri Kozlov).  Closes: #281166.
+    - Simplified Chinese (Tchaikov, Carlos Liu).
+    - Spanish (Javier Fernández-Sanguino Peña).  Closes: #281117.
+    - Swedish (Peter Karlsson).  Closes: #281165.
+
+ -- Scott James Remnant <scott@netsplit.com>  Tue, 11 Jan 2005 16:26:51 +0000
+
 dpkg (1.10.25) unstable; urgency=low
 
   The "你他媽的天下所有的人都該死" Release.
