--- a/po/ca.po
+++ b/po/ca.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.10.22\n"
+"Project-Id-Version: dpkg 1.10.25\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-24 21:47+0200\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-09 19:53+0100\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -58,29 +58,29 @@ msgid "Signal no.%d"
 msgstr "Senyal núm.%d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "s'ha produït un error intern de gzip: «%s»"
+msgstr "%s: s'ha produït un error intern de gzip: «%s»"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "no s'ha pogut executar gzip -dc"
+msgstr "%s: no s'ha pogut executar gzip -dc"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "s'ha produït un error intern de gzip: «%s»"
+msgstr "%s: s'ha produït un error intern de gzip: «%s»"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "no s'ha pogut executar gzip -dc"
+msgstr "%s: no s'ha pogut executar gzip -dc"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: sense compressió de la còpia loop"
+msgstr "%s: descompressió"
 
 #: lib/compression.c:128
 #, c-format
@@ -104,30 +104,30 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: no s'ha pogut executar gzip %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: s'ha produït un error intern de gzip: lectura: «%s»"
+msgstr "%s: s'ha produït un error intern de bzip2: lectura: «%s»"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: s'ha produït un error intern de gzip: escriptura «%s»"
+msgstr "%s: s'ha produït un error intern de bzip2: escriptura «%s»"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
 msgstr ""
-"%s: s'ha produït un error intern de gzip: lectura(%i) != escriptura(%i)"
+"%s: s'ha produït un error intern de bzip2: lectura(%i) != escriptura(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: no s'ha pogut executar gzip %s"
+msgstr "%s: no s'ha pogut executar bzip2 %s"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: sense compressió de la còpia loop"
+msgstr "%s: compressió"
 
 #: lib/database.c:125
 #, c-format
@@ -4448,10 +4448,9 @@ msgid "Help: "
 msgstr "Ajuda: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"Premeu ? per al menú d'ajuda, <espai> per al següent tema, <enter> per a "
-"sortir."
+"Premeu ? per al menú d'ajuda, . per al següent tema, <espai> per a sortir."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4459,11 +4458,11 @@ msgstr "La info. d'ajuda està disponible sota els següents temes:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Premeu una tecla de de la llista superior, <enter>, «q» o «Q» per a sortir\n"
-"de l'ajuda, o <espai> per a llegir cada pàgina d'ajuda al seu torn. "
+"Premeu una tecla de de la llista superior, <espai> o «q» per a sortir de\n"
+"l'ajuda, o «.» (punt) per a llegir cada pàgina d'ajuda al seu torn. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5755,14 +5754,14 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
-"Benvingut al llistat principal de paquets de dselect.\n"
+"Benvingut al llistat principal de paquets del dselect.\n"
 "\n"
-"Se vos presentarà un llistat de paquets que estan instal·lats o disponibles\n"
+"S'us presentarà un llistat de paquets que estan instal·lats o disponibles\n"
 "per a ser instal·lats. Podeu navegar pel llistat usant les tecles de\n"
 "cursor, marcar els paquets a instal·lar (utilitzant «+») o desinstal·lar\n"
 "(utilitzant «-»).\n"
@@ -5771,20 +5770,20 @@ msgstr ""
 "afectarà als paquets descrits per la línia ressaltada.\n"
 "\n"
 "Algunes de les vostres seleccions causaran conflictes o problemes de\n"
-"dependències; se vos donarà una subllista dels paquets rellevants per a que\n"
+"dependències; s'us donarà una subllista dels paquets rellevants per a que\n"
 "pogueu solventar els problemes.\n"
 "\n"
 "Haurieu de llegir la llista de tecles i les explicacions de la pantalla.\n"
 "Hi ha molta ajuda en línia disponible, feu ús d'ella - premeu «?» en\n"
 "qualsevol moment per a obtindre ajuda.\n"
 "\n"
-"Quan hagueu acavat de seleccionar paquets, orémeu <enter> per a confirmar\n"
-"els canvis, o «Q» per a sortir sense desar els canvis. Llavors es "
+"Quan hagueu acabat de seleccionar paquets, prémeu <enter> per a confirmar\n"
+"els canvis, o «X» per a sortir sense desar els canvis. Llavors es "
 "realitzarà\n"
 "una última verificació dels conflictes i dependències - aquí també podrieu\n"
 "veure una subllista.\n"
 "\n"
-"Premeu <enter> per a abandonar l'ajuda i entrar ara al llistat.\n"
+"Premeu <espai> per a abandonar l'ajuda i entrar ara al llistat.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5808,11 +5807,11 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Benvingut al llistat principal de paquets de dselect.\n"
 "\n"
-"Se vos presentarà un llistat de paquets que estan instal·lats o disponibles\n"
+"S'us presentarà un llistat de paquets que estan instal·lats o disponibles\n"
 "per a ser instal·lats. Ja que no teniu els privilegis necessaris per a\n"
 "actualitzar els estats dels paquets, esteu en el mode només lectura. Podeu\n"
 "navegar pel llistat usant les tecles de cursor (vegeu la pantalla d'ajuda\n"
@@ -5823,9 +5822,9 @@ msgstr ""
 "Hi ha molta ajuda en línia disponible, feu ús d'ella - premeu «?» en\n"
 "qualsevol moment per a obtindre ajuda.\n"
 "\n"
-"Quan hagueu acavat de navegar, premeu «Q» o <enter> per a sortir.\n"
+"Quan hagueu acabat de navegar, premeu «Q» o <enter> per a sortir.\n"
 "\n"
-"Premeu <enter> per a abandonar l'ajuda i entrar ara al llistat.\n"
+"Premeu <espai> per a abandonar l'ajuda i entrar ara al llistat.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5862,7 +5861,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Resolució de dependències/conflictes - introducció.\n"
@@ -5883,15 +5882,15 @@ msgstr ""
 "Podeu avortar el(s) canvi(s) que han causat el problema i tornar a la\n"
 "llista principal, prement la «X» majúscula.\n"
 "\n"
-"També vos podeu moure per la llista i canviar les marques per a que "
+"També us podeu moure per la llista i canviar les marques per a que "
 "s'adapten\n"
 "al que voleu, i podeu «rebutjar» les suggerències utilitzant la «D» o «R»\n"
-"majúscula (mireu la pantalla d'ajuda de lligams de tecles). Podeu utilitzar\n"
+"majúscula (vegeu la pantalla d'ajuda de lligams de tecles). Podeu utilitzar\n"
 "la «Q» majúscula per a forçar a acceptar la situació mostrada actualment,\n"
 "en el cas de que desitgeu descartar una recomanació o penseu que el\n"
 "programa s'ha equivocat.\n"
 "\n"
-"Premeu <enter> per a abandonar l'ajuda i entrar en la subllista; recordeu:\n"
+"Premeu <espai> per a abandonar l'ajuda i entrar en la subllista; recordeu:\n"
 "premeu «?» per a obtindre ajuda.\n"
 
 #: dselect/helpmsgs.cc:100
