--- a/po/de.po
+++ b/po/de.po
@@ -2,17 +2,17 @@
 # Copyright 2000 Software in the Public Interest.
 # Hartmut Koptein <koptein@debian.org>, Apr 2000.
 # Erich Schubert <debian@vitavonni.de>, March 2001.
-# Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004.
+# Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004, 2005.
 # Florian Ernst <florian@uni-hd.de>, 2004.
 #
 # $Id: de.po,v 1.15.2.3 2004/04/25 17:57:33 keybuk Exp $
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.10.22\n"
+"Project-Id-Version: Debian dpkg 1.10.26\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-25 10:53 +0200\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-03 11:24 +0100\n"
 "Last-Translator: Michael Piefel <piefel@debian.org>\n"
 "Language-Team: German <de@debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -62,29 +62,29 @@ msgid "Signal no.%d"
 msgstr "Signal Nr. %d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "Interner gzip-Fehler »%s«"
+msgstr "%s: interner gzip-Fehler »%s«"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "konnte gzip -d nicht ausführen "
+msgstr "%s: konnte gzip -dc nicht ausführen"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "Interner gzip-Fehler »%s«"
+msgstr "%s: interner bzip2-Fehler »%s«"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "konnte gzip -d nicht ausführen "
+msgstr "%s: konnte bzip2 -dc nicht ausführen"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: keine Kompressions-Kopierschleife"
+msgstr "%s: Dekomprimierung"
 
 #: lib/compression.c:128
 #, c-format
@@ -107,29 +107,29 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: kann gzip %s nicht ausführen"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: interner gzip-Fehler beim Lesen: »%s«"
+msgstr "%s: interner bzip2-Fehler beim Lesen: »%s«"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: interner gzip-Fehler beim Schreiben: »%s«"
+msgstr "%s: interner bzip2-Fehler beim Schreiben: »%s«"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: interner gzip-Fehler: read(%i) != write(%i)"
+msgstr "%s: interner bzip2-Fehler: read(%i) != write(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: kann gzip %s nicht ausführen"
+msgstr "%s: kann bzip2 %s nicht ausführen"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: keine Kompressions-Kopierschleife"
+msgstr "%s: Komprimierung"
 
 #: lib/database.c:125
 #, c-format
@@ -2985,7 +2985,7 @@ msgstr "kann altes postrm-Skript nicht löschen"
 #: main/select.c:80 main/query.c:200 main/query.c:422
 #, c-format
 msgid "No packages found matching %s.\n"
-msgstr "Kein Paket gefunden, dass auf %s passt.\n"
+msgstr "Kein Paket gefunden, das auf %s passt.\n"
 
 #: main/select.c:95
 msgid "--set-selections does not take any argument"
@@ -3593,7 +3593,7 @@ msgid ""
 "dpkg-deb: file looks like it might be an archive which has been\n"
 "dpkg-deb:    corrupted by being downloaded in ASCII mode\n"
 msgstr ""
-"dpkg-deb: Datei könnte ein Archiv sein, dass beschädigt wurde\n"
+"dpkg-deb: Datei könnte ein Archiv sein, das beschädigt wurde\n"
 "dpkg-deb:    durch einen Download im ASCII-Modus\n"
 
 #: dpkg-deb/extract.c:220
@@ -4360,10 +4360,9 @@ msgid "Help: "
 msgstr "Hilfe: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"»?« für Hilfemenü, »Leer« für nächstes Thema, »Eingabe« zum Verlassen der "
-"Hilfe"
+"»?« für Hilfemenü, ».« für nächstes Thema, »Leer« zum Verlassen der Hilfe."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4371,12 +4370,11 @@ msgstr "Hilfeinformationen sind für die folgenden Themen vorhanden: "
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Drücken Sie eine Taste aus der obigen Liste, »Eingabe«, »q« oder »Q«, um "
-"die\n"
-"  Hilfe zu beenden, oder »Leer«, um alle Hilfsseiten nacheinander zu lesen. "
+"Drücken Sie eine Taste aus der obigen Liste, »Leer« oder »q«, um die\n"
+"  Hilfe zu beenden, oder ».«, um alle Hilfsseiten nacheinander zu lesen. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5668,10 +5666,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Willkommen zur Hauptpaketauswahl von dselect.\n"
 "\n"
@@ -5691,19 +5689,19 @@ msgstr ""
 "können.\n"
 "\n"
 "Sie sollten die Liste der Tasten und die Erklärung der Anzeige durchlesen.\n"
-"Es ist viel Hilfe verfügbar, bitte nutzen Sie sie - drücken Sie jederzeit "
+"Es ist viel Hilfe verfügbar, bitte nutzen Sie sie – drücken Sie jederzeit "
 "»?«,\n"
 "um die Hilfe aufzurufen.\n"
 "\n"
 "Wenn Sie mit ihrer Wahl zufrieden sind, drücken Sie die Eingabe, um "
 "Änderungen\n"
-"zu bestätigen und »Q«, um die Paketliste ohne Änderungen zu verlassen. Es "
+"zu bestätigen oder »X«, um die Paketliste ohne Änderungen zu verlassen. Es "
 "gibt\n"
-"noch eine abschließende Kollisions- und Abhängigkeitsprüfung - evtl. "
+"noch eine abschließende Kollisions- und Abhängigkeitsprüfung – evtl. "
 "erscheint\n"
 "wieder eine Teilliste.\n"
 "\n"
-"Drücken Sie die Eingabe, um die Hilfe zu Verlassen und zur Paketliste zu "
+"Drücken Sie die Leertaste zum Beenden der Hilfe und um zur Paketliste zu "
 "kommen.\n"
 
 #: dselect/helpmsgs.cc:57
@@ -5728,7 +5726,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Willkommen zur Hauptpaketauswahl von dselect. \n"
 "\n"
@@ -5740,13 +5738,13 @@ msgstr ""
 "Zustand von Paketen begutachten und Informationen über sie erhalten.\n"
 "\n"
 "Sie sollten die Liste der Tasten und die Erklärung der Anzeige durchlesen.\n"
-"Es ist viel Hilfe verfügbar, bitte nutzen Sie sie - drücken Sie jederzeit\n"
+"Es ist viel Hilfe verfügbar, bitte nutzen Sie sie – drücken Sie jederzeit\n"
 "»?«, um die Hilfe aufzurufen.\n"
 "\n"
 "Wenn Sie mit dem Durchforsten fertig sind, drücken Sie »Q« oder die\n"
 "Eingabetaste zu Verlassen.\n"
 "\n"
-"Drücken Sie die Eingabe, um die Hilfe zu verlassen und zur Paketliste zu\n"
+"Drücken Sie die Leertaste zum Beenden der Hilfe und um zur Paketliste zu "
 "kommen.\n"
 
 #: dselect/helpmsgs.cc:75
@@ -5785,7 +5783,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Abhängigkeits/Kollisions-Auflösung - Einführung.\n"
@@ -5815,10 +5813,9 @@ msgstr ""
 "(siehe auch die Hilfe zu Tastaturkürzeln). Sie können »Q« benutzen, um mich "
 "dazu\n"
 "zu zwingen, die momentane Situation anzunehmen, für den Fall, dass Sie eine\n"
-"Empfehlung überstimmen wollen oder denken, dass Programm habe sich geirrt.\n"
+"Empfehlung überstimmen wollen oder denken, das Programm habe sich geirrt.\n"
 "\n"
-"Drücken Sie die Eingabetaste zum Beginnen; zur Erinnerung: »?« bringt "
-"Hilfe.\n"
+"Drücken Sie die Leertaste zum Beginnen; zur Erinnerung: »?« bringt Hilfe.\n"
 
 #: dselect/helpmsgs.cc:100
 msgid "Display, part 1: package listing and status chars"
