--- a/po/el.po
+++ b/po/el.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
 "PO-Revision-Date: 2004-10-13 17:54+0300\n"
 "Last-Translator: George Papamichelakis <debian-l10n-greek@lists.debian.org>\n"
 "Language-Team: Hellenic <debian-l10n-greek@lists.debian.org>\n"
@@ -4043,7 +4043,8 @@ msgid "Help: "
 msgstr "Βοήθεια: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+#, fuzzy
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
 "Πατήστε ? για μενού βοηθείας, <space> για επόμενο θέμα, <enter> για έξοδο "
 "βοηθείας."
@@ -4053,9 +4054,10 @@ msgid "Help information is available under the following topics:"
 msgstr "Πληροφορίες βοήθειας είναι διαθέσιμες για τα ακόλουθα θέματα:"
 
 #: dselect/basecmds.cc:192
+#, fuzzy
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
 "Πιέστε ένα πλήκτρο από την παραπάνω λίστα, <enter>, `q' η `Q' για έξοδο από "
 "τη βοήθεια,\n"
@@ -5307,6 +5309,7 @@ msgid "Introduction to package selections"
 msgstr "Γνωριμία με τις επιλογές πακέτων"
 
 #: dselect/helpmsgs.cc:33
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5331,17 +5334,37 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
+"Καλώς ορίσατε στην οθόνη με την λίστα των κυρίων πακέτων του dselect.\n"
+"\n"
+"Θα σας εμφανιστεί μια λίστα από πακέτα τα οποία είναι εγκατεστημένα ή "
+"διαθέσιμα\n"
+"για εγκατάσταση.  Αυτή τη στιγμή δεν διαθέτετε τα απαραίτητα προνόμια  για \n"
+"να αναβαθμίσετε την κατάσταση των πακέτων και βρίσκεστε σε κατάσταση μόνο\n"
+"για ανάγνωση.  Μπορείτε να πλοηγηθείτε στη λίστα των πακέτων με τα βελάκια\n"
+"(δείτε τη σελίδα βοηθείας σχετικά με τους `συνδυασμούς πλήκτρων'), να \n"
+"παρατηρήσετε την τρέχουσα κατάσταση τους και να διαβάσετε πληροφορίες για "
+"αυτά.\n"
+"\n"
+"Θα πρέπει να διαβάσετε την λίστα με τους συνδυασμούς πλήκτρων και την "
+"επεξήγηση\n"
+"της οθόνης.  Υπάρχει διαθέσιμη αρκετή βοήθεια και χρησιμοποιήστε την όσο\n"
+"μπορείτε - πληκτρολογώντας `?' οποιαδήποτε στιγμή.\n"
+"\n"
+"Όταν τελειώσετε με την αναζήτηση, πιέστε `Q' ή ,<enter> για να φύγετε.\n"
+"\n"
+"Πιέστε <enter> για κλείσει η βοήθεια και να δείτε τη λίστα τώρα.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
 msgstr "Γνωριμία με τον για ανάγνωση μόνο εμφανιστή πακέτων"
 
 #: dselect/helpmsgs.cc:57
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5359,7 +5382,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Καλώς ορίσατε στην οθόνη με την λίστα των κυρίων πακέτων του dselect.\n"
 "\n"
@@ -5386,6 +5409,7 @@ msgid "Introduction to conflict/dependency resolution sub-list"
 msgstr "Γνωριμία με την λίστα ανάλυσης εξαρτήσεων/συγκρούσεων"
 
 #: dselect/helpmsgs.cc:75
+#, fuzzy
 msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
@@ -5416,7 +5440,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Εισαγωγή στη ανάλυση εξαρτήσεων/συγκρούσεων.\n"
