--- a/po/eu.po
+++ b/po/eu.po
@@ -1,21 +1,22 @@
+# translation of dpkg-eu.po to Librezale.org
 # translation of dpkg_po.po to Euskara
 # translation of dpkg_po.po to Euskera
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Copyright (C) 2004, 2005 Free Software Foundation, Inc.
 # Jordi Blasi <valpur@euskalnet.net>, 2004.
-# Piarres Beobide Egaña <pi@beobide.net>, 2004.
+# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg_po\n"
+"Project-Id-Version: dpkg-eu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-25 21:01+0200\n"
-"Last-Translator: Piarres Beobide Egaña <pi@beobide.net>\n"
-"Language-Team: Euskara <librezale@librezale.org>\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-09 20:49+0100\n"
+"Last-Translator: Piarres Beobide  <pi@beobide.net>\n"
+"Language-Team: Librezale.org <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: lib/compat.c:46
@@ -61,29 +62,29 @@ msgid "Signal no.%d"
 msgstr "%d zenbakidun Seinalea"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "Barne gzip erorea: `%s'"
+msgstr "%s: barne gzip errorea: `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "huts gzip -d abiarazterakoan"
+msgstr "%s: huts gzip -dc abiarazterakoan"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "Barne gzip erorea: `%s'"
+msgstr "%s: barne bzip2 erorea: `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "huts gzip -d abiarazterakoan"
+msgstr "%s: huts bzip -dc abiarazterakoan"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: komprimitu gabe"
+msgstr "%s: deskomprimitzen"
 
 #: lib/compression.c:128
 #, c-format
@@ -106,29 +107,29 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: ezin da gzip %s abiarazi"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: barne gzip errorea: irakurri: `%s'"
+msgstr "%s: barne bzip2 errorea: irakurri: `%s'"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: barne gzip errorea: idatzi: `%s'"
+msgstr "%s: barne bzip2 errorea: idatzi: `%s'"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: barne gzip errorea: irakurri(%i) != idatzi(%i)"
+msgstr "%s: barne bzip2 errorea: irakurri(%i) != idatzi(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: ezin da gzip %s abiarazi"
+msgstr "%s: ezin da bzip2 %s abiarazi"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: komprimitu gabe"
+msgstr "%s: kompresioa"
 
 #: lib/database.c:125
 #, c-format
@@ -4394,10 +4395,10 @@ msgid "Help: "
 msgstr "Laguntza: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"? saktu menura joateko. <zuriune barra> hurrengo gaira joateko, <enter> "
-"laguntzatik ateratzeko."
+"? saktu menura joateko. . hurrengo gaira joateko eta <zuriune-barra> "
+"laguntza uzteko."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4405,12 +4406,11 @@ msgstr "Honako gai hauetan laguntza argibideak eskuragarri daude:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Sakatu haurrekozerrendako tekla bat, <enter>, `q' edo `Q' laguntzatik "
-"irteteko\n"
-"  edo <hutsunea> laguntza horri bakoitza irakurtzeko. "
+"Sakatu haurreko zerrendako tekla bat, <enter>, edo `q' laguntzatik irteteko\n"
+"  edo `.' laguntza horri bakoitza irakurtzeko. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5697,17 +5697,17 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Ongi etorria dselect pakete zerrenda nagusira.\n"
 "\n"
 "Instalaturik eta instalagarri dauden paketeen zerrenda bat bistaraziko "
 "zaizu.\n"
-"Zerrenda barruan kurtsore teklak erabiliaz mugi zaitezke, markatu paketeak\n"
-"instalatzeko (`+' erabiliaz) edo ezabatzeko (`-' erabiliaz)...\n"
+"Zerrenda barruan kurtsore teklak erabiliaz mugi zaitezke, paketeak\n"
+"instalatzeko (`+' erabiliaz) edo ezabatzeko (`-' erabiliaz) markatu ...\n"
 "Paketeak bakarka edo taldeetan markatu daitezke, hasiera batetan `Pakete \n"
 "guztiak' lerroa nabarmendurik dago.  `+', `-' eta besteek nabarmendutako "
 "lerroak\n"
@@ -5723,11 +5723,11 @@ msgstr ""
 "ugari dago, sakatu `?' edozein momentutan laguntzara joateko. \n"
 "\n"
 "Paketeak aukeratzeaz amaitu duzunean, <intro> sakatu aldaketak berresteko,\n"
-"edo `Q' alde batetara uzteko. Azken elkarjotze eta dependentzi egiaztapen "
+"edo `X' alde batetara uzteko. Azken elkarjotze eta dependentzi egiaztapen "
 "bat\n"
 "egingo da - hemen azpimenu bat ikus dezakezu.\n"
 "\n"
-"<intro> sakatu laguntza utzi eta zerrenda bistaratzeko.\n"
+"<zuriune-barra> sakatu laguntza utzi eta zerrenda bistaratzeko.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5751,7 +5751,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Ongietorria dselect-en pakete zerrenda nagusira.\n"
 "\n"
@@ -5768,7 +5768,7 @@ msgstr ""
 "\n"
 "Amaitzean `Q' edo <intro> sakatu irteteko.\n"
 "\n"
-"<intro> sakatu laguntza utzi eta zerrendara joateko.\n"
+"<zuriune-barra> sakatu laguntza utzi eta zerrendara joateko.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5805,12 +5805,12 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Dependentzi/elkarjotze zuzenketak - sarrera.\n"
 "\n"
-"Zuk egindako aldaketa bat edo gehiafo dependetzi edo elkarjotze arazo bat "
+"Zuk egindako aldaketa bat edo gehiagok dependetzi edo elkarjotze arazo bat "
 "sortu du -\n"
 "pakete batzuek beste batzuekin batera bakarrik instala daitezke; eta pakete "
 "konbinazio\n"
@@ -6055,12 +6055,3 @@ msgstr ""
 " ^l                pantaila berritu\n"
 "  /                bilatu (return ezeztatzeko)\n"
 "  \\                azken ekintza berriz egin\n"
-
-#~ msgid "must be at least two characters"
-#~ msgstr "beintzat bi karaktere eduki behar ditu"
-
-#~ msgid "no gcc-lib component"
-#~ msgstr "ez dago gcc-lib osagaia"
-
-#~ msgid "no slash after gcc-lib"
-#~ msgstr "ez dago bi punturik gcc-lib ondoren"
