--- a/po/fr.po
+++ b/po/fr.po
@@ -21,14 +21,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian dpkg 1.6.13\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-28 09:39+0200\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2004-12-31 07:30+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n>1;\n"
 
 # #######################################"
@@ -117,22 +117,22 @@ msgstr "Signal n° %d"
 #: lib/compression.c:45
 #, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "%s : erreur interne de gzip : « %s »"
+msgstr "%s : erreur interne de gzip : « %s »"
 
 #: lib/compression.c:60
 #, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "%s : impossible d'exécuter « gzip -dc »"
+msgstr "%s : impossible d'exécuter « gzip -dc »"
 
 #: lib/compression.c:76
 #, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "%s : erreur interne de bzip2 : « %s »"
+msgstr "%s : erreur interne de bzip2 : « %s »"
 
 #: lib/compression.c:91
 #, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "%s : impossible d'exécuter « bzip2 -dc »"
+msgstr "%s : impossible d'exécuter « bzip2 -dc »"
 
 #: lib/compression.c:94
 #, c-format
@@ -2467,7 +2467,7 @@ msgstr ""
 " < << <= = >= >> >       (uniquement pour des raison de compatibilité avec\n"
 "                          la syntaxe du fichier control)\n"
 "\n"
-"Utilisez « dselect » ou « aptitude » pour gérer les paquets de manière plus "
+"Utilisez « dselect » ou « aptitude » pour gérer les paquets de manière plus "
 "conviviale.\n"
 
 #: main/main.c:120
@@ -3624,7 +3624,7 @@ msgstr ""
 #: dpkg-deb/build.c:448
 #, c-format
 msgid "Internal error, compress_type `%i' unknown!"
-msgstr "Erreur interne, type de compression inconnu : %i"
+msgstr "Erreur interne, type de compression inconnu : %i"
 
 #: dpkg-deb/build.c:460
 msgid "failed to rewind tmpfile (data)"
@@ -4048,7 +4048,7 @@ msgstr ""
 "  -z#                    Utilise la compression lors de la construction.\n"
 "  -Z<type>               Indique le type de compression utilisée\n"
 "                         pour la construction\n"
-"                         valeurs possibles : gzip, bzip2, none\n"
+"                         valeurs possibles : gzip, bzip2, none\n"
 "\n"
 "Syntaxe du formatage :\n"
 "  Un formatage est une chaîne qui sera affichée pour chaque paquet.\n"
@@ -4577,9 +4577,9 @@ msgid "Help: "
 msgstr "Aide : "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"Appuyez sur ? pour un menu d'aide, <espace> pour le sujet suivant, <Entrée>\n"
+"Appuyez sur ? pour un menu d'aide, . pour le sujet suivant, <espace>\n"
 "pour quitter l'aide."
 
 #: dselect/basecmds.cc:184
@@ -4588,12 +4588,12 @@ msgstr "L'information d'aide est accessible au travers des thèmes suivants :"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
 "Appuyez sur une des touches listées ci-dessus,\n"
-"  « q » ou « Q » sortir de l'aide, ou « espace » pour\n"
-"  lire chaque page tour à tour. "
+"  <espace> ou « q » pour sortir de l'aide,\n"
+"  ou . pour lire chaque page tour à tour. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5902,10 +5902,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Bienvenue dans la liste principale des paquets.\n"
 "\n"
@@ -5929,11 +5929,11 @@ msgstr ""
 "\n"
 "Lorsque vous serez satisfaits de vos choix vous n'aurez qu'à appuyer sur\n"
 "Entrée pour confirmer vos changements et quitter la liste des paquets, ou\n"
-"sur « Q » pour quitter la liste sans enregistrer vos changements. Une\n"
+"sur « X » pour quitter la liste sans enregistrer vos changements. Une\n"
 "vérification finale des conflits et des dépendances sera effectuée - ici\n"
 "aussi vous verrez peut-être une sous-liste.\n"
 "\n"
-"Appuyez sur Espace pour quitter l'aide et voir la liste.\n"
+"Appuyez sur <espace> pour quitter l'aide et voir la liste.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5959,7 +5959,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Bienvenue dans la liste principale des paquets.\n"
 "\n"
@@ -5979,7 +5979,7 @@ msgstr ""
 "pour\n"
 "quitter.\n"
 "\n"
-"Appuyez sur Espace pour quitter l'aide et accéder à la liste.\n"
+"Appuyez sur <espace> pour quitter l'aide et accéder à la liste.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -6016,7 +6016,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Résolution de dépendance/conflit - introduction.\n"
@@ -6048,7 +6048,7 @@ msgstr ""
 "présentement affichée, dans le cas où vous voudriez outrepasser une\n"
 "recommandation ou vous pensez que le programme est dans l'erreur.\n"
 "\n"
-"Appuyez sur Entrée pour quitter l'aide et accéder à la sous-liste ;\n"
+"Appuyez sur <espace> pour quitter l'aide et accéder à la sous-liste ;\n"
 "rappel : appuyez sur « ? » pour obtenir de l'aide.\n"
 
 #: dselect/helpmsgs.cc:100
