--- a/po/gl.po
+++ b/po/gl.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.9.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-15 07:35+0200\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2004-11-13 20:45+0200\n"
 "Last-Translator: Héctor Fernández López <trorrr@yahoo.es>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -57,30 +57,30 @@ msgid "Signal no.%d"
 msgstr "Sinal no.%d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "erro interno de gzip: `%s'"
+msgstr "%s: erro interno de gzip: `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "erro ó executar gzip -dc"
+msgstr "%s: erro ó executar gzip -dc"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "erro interno de gzip: `%s'"
+msgstr "%s: erro interno de bzip2: `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "erro ó executar gzip -dc"
+msgstr "%s: erro ó executar bzip2 -dc"
 
 #  Non sei ningunha forma mellor de traducilo
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: non hai un lazo de copia con compresión"
+msgstr "%s: descompresión"
 
 #: lib/compression.c:128
 #, c-format
@@ -103,30 +103,30 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: non se puido executar gzip %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: erro interno de gzip: lectura: `%s'"
+msgstr "%s: erro interno de bzip2: lectura: `%s'"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: erro interno de gzip: escritura: `%s'"
+msgstr "%s: erro interno de bzip2: escritura: `%s'"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: erro interno de gzip: read(%i) != write(%i)"
+msgstr "%s: erro interno de bzip2: read(%i) != write(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: non se puido executar gzip %s"
+msgstr "%s: non se puido executar bzip2 %s"
 
 #  Non sei ningunha forma mellor de traducilo
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: non hai un lazo de copia con compresión"
+msgstr "%s: compresión"
 
 #: lib/database.c:125
 #, c-format
@@ -4385,7 +4385,8 @@ msgid "Help: "
 msgstr "Axuda: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+#, fuzzy
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
 "Preme ? para o menú de axuda, <espacio> para o seguinte tema ou <enter>\n"
 "para saír"
@@ -4395,9 +4396,10 @@ msgid "Help information is available under the following topics:"
 msgstr "A información de axuda está dispoñible baixo os seguintes temas:"
 
 #: dselect/basecmds.cc:192
+#, fuzzy
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
 "Presione unha tecla da lista anterior, <entrar>, q ou Q para saír da\n"
 "axuda ou <espacio> para ler cada páxinas unha por unha. "
@@ -5671,6 +5673,7 @@ msgid "Introduction to package selections"
 msgstr "Introducción á selección de paquetes"
 
 #: dselect/helpmsgs.cc:33
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5695,10 +5698,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Benvido ó listado principal de paquetes.\n"
 "\n"
@@ -5730,6 +5733,7 @@ msgid "Introduction to read-only package list browser"
 msgstr "Introducción ó navegador de paquetes de só lectura"
 
 #: dselect/helpmsgs.cc:57
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5747,7 +5751,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Benvido ó listado principal de paquetes de dselect.\n"
 "Vaiseche presentar unha lista cos paquetes que están instalados ou\n"
@@ -5769,6 +5773,7 @@ msgid "Introduction to conflict/dependency resolution sub-list"
 msgstr "Introducción á lista de resolución de conflicto/dependencia"
 
 #: dselect/helpmsgs.cc:75
+#, fuzzy
 msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
@@ -5799,7 +5804,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Resolución de dependencia/conflicto - Introducción.\n"
