--- a/po/ja.po
+++ b/po/ja.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.10.23\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-25 11:24+0900\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2004-12-31 16:22+0900\n"
 "Last-Translator: Kenshi Muto <kmuto@debian.org>\n"
 "Language-Team: Debian Japanease List <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -70,29 +70,29 @@ msgid "Signal no.%d"
 msgstr "%d番のシグナルが発生しました。"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "内部 gzip エラー: `%s'"
+msgstr "%s: 内部 gzip エラー: `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "gzip -dc の実行に失敗しました。"
+msgstr "%s: gzip -dc の実行に失敗しました。"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "内部 gzip エラー: `%s'"
+msgstr "%s: 内部 bzip2 エラー: `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "gzip -dc の実行に失敗しました。"
+msgstr "%s: bzip2 -dc の実行に失敗しました。"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: 圧縮コピーループがありません。"
+msgstr "%s: 展開"
 
 #: lib/compression.c:128
 #, c-format
@@ -115,29 +115,29 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: gzip %s の実行に失敗しました。"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: 内部 gzip エラー(読み込み) `%s' です。"
+msgstr "%s: 内部 bzip2 エラー(読み込み) `%s' です。"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: 内部 gzip エラー(書きこみ) `%s' です。"
+msgstr "%s: 内部 bzip2 エラー(書きこみ) `%s' です。"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: 内部 gzip エラー: read(%i) != write(%i)"
+msgstr "%s: 内部 bzip2 エラー: read(%i) != write(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: gzip %s の実行に失敗しました。"
+msgstr "%s: bzip2 %s の実行に失敗しました。"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: 圧縮コピーループがありません。"
+msgstr "%s: 圧縮"
 
 #: lib/database.c:125
 #, c-format
@@ -4351,8 +4351,8 @@ msgid "Help: "
 msgstr "ヘルプ: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
-msgstr "ヘルプメニュー:?, 次のトピック:<スペース>, ヘルプの終了:<Enter>"
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
+msgstr "ヘルプメニュー:?, 次のトピック:., ヘルプの終了:<スペース>"
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4360,12 +4360,11 @@ msgstr "以下のトピックスからヘルプ情報が利用できます:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"上のリストからキーを入力してください。<Enter>、`q'、`Q' でヘルプを終了しま"
-"す。\n"
-"または <スペース>でヘルプページを順次見ていくことができます。"
+"上のリストからキーを入力してください。<space>、`q' でヘルプを終了します。\n"
+"または <.>でヘルプページを順次見ていくことができます。"
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5645,10 +5644,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "メインパッケージ一覧にようこそ。\n"
 "\n"
@@ -5671,10 +5670,10 @@ msgstr ""
 "を参照できます。\n"
 "        \n"
 "パッケージの選択を完了したら、リターンキーを入力し、変更を確認します\n"
-"(あるいは変更を保存せずに終了するには `Q' を押します)。競合・依存関係の最終\n"
+"(あるいは変更を保存せずに終了するには `X' を押します)。競合・依存関係の最終\n"
 "チェックが行われます。- 問題がある場合はサブリストで表示されます。\n"
 "\n"
-"リターンキーを押すとヘルプが終了し、パッケージ一覧画面になります。\n"
+"<スペース>キーを押すとヘルプが終了し、パッケージ一覧画面になります。\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5698,7 +5697,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "dselect メインパッケージ一覧にようこそ。\n"
 "\n"
@@ -5715,7 +5714,7 @@ msgstr ""
 "もヘルプを参照できます。\n"
 "\n"
 "閲覧を終えたら、`Q' またはリターンキーを押せば終了します。\n"
-"リターンキーを押すとヘルプが終了し、パッケージ一覧画面になります。\n"
+"<スペース>キーを押すとヘルプが終了し、パッケージ一覧画面になります。\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5752,7 +5751,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "依存関係/競合解決のための手引き\n"
@@ -5778,7 +5777,7 @@ msgstr ""
 "い)。推奨を無視したい場合やプログラム側の誤りと考えられる場合に、現在表示さ\n"
 "れている状態で強制的に承諾させたいならば、大文字 `Q' を使用してください。\n"
 "\n"
-"ヘルプを終了してサブリストに戻るにはスペースキーを入力します。\n"
+"ヘルプを終了してサブリストに戻るには<スペース>キーを入力します。\n"
 "`?' キーでヘルプの参照ができることを覚えておいてください。\n"
 
 #: dselect/helpmsgs.cc:100
