--- a/po/nl.po
+++ b/po/nl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.9.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-28 22:01+0100\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-06 23:41+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1107,7 +1107,7 @@ msgstr "dpkg: pakket %s behoeft herinstallatie, zal het niet verwijderen.\n"
 #: main/archives.c:764
 #, c-format
 msgid "dpkg: yes, will remove %s in favour of %s.\n"
-msgstr "dpkg: ja, %s wordt verwijdert ten gunste van %s.\n"
+msgstr "dpkg: ja, %s wordt verwijderd ten gunste van %s.\n"
 
 #: main/archives.c:772
 #, c-format
@@ -2905,7 +2905,7 @@ msgstr "Zou %s verwijderen of wissen ...\n"
 #: main/remove.c:164
 #, c-format
 msgid "Removing %s ...\n"
-msgstr "%s wordt verwijderdt...\n"
+msgstr "%s wordt verwijderd ...\n"
 
 #: main/remove.c:250 main/remove.c:363
 #, c-format
@@ -4342,10 +4342,10 @@ msgid "Help: "
 msgstr "Hulp: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"Op <?> drukken geeft het helpmenu, <spatie> voor volgend onderwerp, <enter> "
-"om de help te verlaten."
+"'?' drukken geeft het helpmenu, '.' geeft het volgend onderwerp, 'spatie' "
+"verlaat het helpmenu."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4353,10 +4353,11 @@ msgstr "Hulp informatie is beschikbaar onder te volgende onderwerpen:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Druk op een van de toetsen hierboven, Spatie om te beëindigen,\n"
+"Druk op een van de toetsen hierboven, 'Spatie' of 'q' om de help af te "
+"sluiten,\n"
 "  of `.' (punt) om alle pagina's een voor een te lezen. "
 
 #: dselect/basecmds.cc:198
@@ -5640,41 +5641,41 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
-"Welkom bij de hoofdlijst met pakketten.  Lees aub. de beschikbare hulp!\n"
+"Welkom bij de hoofdpakketlijst.\n"
 "\n"
 "U krijgt zometeen een lijst te zien van pakketten die geïnstalleerd of "
 "beschik-\n"
-"baar zijn voor installatie.  U kunt de lijst bekijken met cursortoetsen,\n"
-"markeer pakketten om te installeren (met `+') of deinstalleren (met `-').\n"
-"\n"
+"baar zijn voor installatie.  U kunt door de lijst heen lopen met de "
+"cursortoetsen,\n"
+"pakketten markeren om te installeren (met `+') of deinstalleren (met `-').\n"
 "Pakketten kunnen alleen of in groepen gemarkeerd worden; aanvankelijk zult "
 "u\n"
-"zien dat de regel met `Alle pakketten' geselecteerd is.  `+', `-' etc. "
-"werken\n"
-"op alle pakketten omschreven door de opgelichte regel.  Gebruik `o' om de\n"
-"volgorde te veranderen (dit verandert welke groepselecties mogelijk zijn).\n"
-"\n"
-"(Vooral voor nieuwe installaties:) Standaardpakketten zijn geselecteerd.\n"
-"Gebruik letters `D' of `R' om te veranderen, zie het hulpscherm voor "
-"toetsen.\n"
-"\n"
+"zien dat de regel met `Alle pakketten' geselecteerd is.\n"
+"`+', `-', en dergelijke werken op alle pakketten omschreven door de "
+"opgelichte\n"
+"regel. \n"
 "Sommige keuzes zullen conflicten of vereistenproblemen veroorzaken; u\n"
 "ziet dan een lijst van relevante pakketten, zodat u het probleem kunt "
 "oplossen.\n"
 "\n"
+"U kunt best de lijst met sneltoetsen en de uitleg over de weergave goed \n"
+"doorlezen. Er is een grote hoeveelheid on-line help beschikbaar, maak hier "
+"dus\n"
+"gebruik van! U komt op elk moment bij de help door '?' te drukken.\n"
 "Als u tevreden bent met de lijst moet u op Enter drukken om de "
 "veranderingen\n"
-"te bevestigen en de lijst te verlaten.  Een laatste controle op conflicten "
-"en\n"
-"vereiste wordt uitgevoerd - ook hier kunt u nog een lijst krijgen.\n"
+"te bevestigen, of 'X' om de lijst te verlaten zonder aanpassingen uit te "
+"voeren.\n"
+"Een laatste controle op conflicten en vereisten wordt uitgevoerd - ook hier "
+"kunt\n"
+" u nog een lijst krijgen.\n"
 "\n"
-"Druk op Spatie om hulp te verlaten en de lijst te zien; druk op `?' voor "
-"hulp.\n"
+"Druk op Spatie om hulp te verlaten en de binnen te gaan.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5698,26 +5699,29 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
-"Welkom bij de hoofdlijst met pakketten.  Omdat u niet de benodigde rechten\n"
-"heeft om de pakketstatus te veranderen, zin u in de alleen-lezen modus.\n"
-"\n"
-"Er is veel on-line hulp beschikbaar, maak er gebruik van!  Druk op `?' voor\n"
-"hulp. U kunt de lijst met toetsaanslagen bekijken en de uitleg over het "
-"scherm.\n"
+"Welkom bij de hoofdpakketlijst.\n"
 "\n"
 "U krijgt zometeen een lijst te zien van pakketten die geïnstalleerd of "
 "beschik-\n"
-"baar zijn voor installatie.  U kunt de lijst bekijken met cursortoetsen "
-"(net\n"
-"zoals wanneer u lees-/schrijfrechten had - zie de lijst met toetsaanslagen) "
-"en\n"
-"bekijk de status van de pakketten en lees informatie.\n"
+"baar zijn voor installatie. Omdat u niet de benodigde rechten heeft om de \n"
+"pakketstatus te veranderen, bevindt u zich in de alleen-lezen modus. U "
+"kunt \n"
+"de lijst bekijken m.b.v. de cursortoetsen(zie het 'toetsaanslagen' "
+"helpscherm)\n"
+"de status van pakketten nagaan, en informatie over deze pakketten nalezen.\n"
 "\n"
-"Druk op Spatie om hulp te verlaten en de lijst te zien; druk op `?' voor "
-"hulp.\n"
-"Als u klaar bent met kijken, druk op `Q' of <enter> om te beëindigen.\n"
+"U kunt best de lijst met toetsaanslagen en de uitleg over de weergave "
+"door- \n"
+"lezen. Er is veel on-line hulp beschikbaar, gelieve daar dus gebruik van "
+"te \n"
+"maken!  Druk op om het even welk moment op '?'  om het helpscherm te "
+"bekomen\n"
+"\n"
+"Als u klaar bent met kijken, druk op 'Q' of 'enter' om af te sluiten.\n"
+"\n"
+"Druk op 'spatie' om de help te verlaten en de lijst te bekijken.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5754,7 +5758,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Afhankelijkheids-/conflictoplosser - inleiding.\n"
@@ -5764,8 +5768,8 @@ msgstr ""
 "combinatie\n"
 "met andere, en sommige combinaties mogen niet samen geïnstalleerd zijn.\n"
 "\n"
-"U krijgt een sublijst met alle gemoeide pakketten.  De onderste helft van "
-"het\n"
+"U krijgt een sublijst met alle betrokken pakketten te zien.  De onderste "
+"helft van het\n"
 "scherm bevat de relevante conflicten en vereisten; gebruik `i' om te\n"
 "wisselen daartussen, de pakketomschrijvingen en de interne besturingsinfo.\n"
 "\n"
@@ -5786,8 +5790,9 @@ msgstr ""
 "gebruiken om de getoonde lijst geforceerd te accepteren, in het geval dat u\n"
 "denkt dat het programma het mis heeft.\n"
 "\n"
-"Druk op Spatie om hulp te verlaten en enter de sublijst; onthoud: `?' voor "
-"hulp.\n"
+"Druk op Spatie om hulp te verlaten en de sublijst binnen te gaan; Vergeet "
+"ook niet\n"
+"dat '?' drukken je naar de help brengt.\n"
 
 #: dselect/helpmsgs.cc:100
 msgid "Display, part 1: package listing and status chars"
