--- a/po/nn.po
+++ b/po/nn.po
@@ -1,21 +1,22 @@
+# translation of dpkg_nn.po to Norwegian (Nynorsk)
 # translation of nn.po to Norwegian nynorsk
 # translation of dpkg.po to Norwegian nynorsk
 # translation of nn.po to Norwegian Nynorsk
 # translation of dpkg.po to Norwegian Nynorsk
 # Gaute Hvoslef Kvalnes <gaute@verdsveven.com>, 2003, 2004.
-# Håvard Korsvoll <korsvoll@skulelinux.no>, 2003, 2004.
+# Håvard Korsvoll <korsvoll@skulelinux.no>, 2003, 2004, 2005.
 msgid ""
 msgstr ""
-"Project-Id-Version: nn\n"
+"Project-Id-Version: dpkg_nn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-25 23:01+0200\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-08 16:16+0100\n"
 "Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
-"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
+"Language-Team: Norwegian (Nynorsk) <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.9.1\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: lib/compat.c:46
@@ -61,29 +62,29 @@ msgid "Signal no.%d"
 msgstr "Signal nr. %d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "intern gzip-feil: «%s»"
+msgstr "%s: intern gzip-feil: «%s»"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "klarte ikkje køyra «gzip -dc»"
+msgstr "%s: klarte ikkje køyra «gzip -dc»"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "intern gzip-feil: «%s»"
+msgstr "%s: intern bzip2-feil: «%s»"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "klarte ikkje køyra «gzip -dc»"
+msgstr "%s: klarte ikkje køyra «bzip2 -dc»"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: Inga kopiløkkje i komprimering"
+msgstr "%s: dekomprimering"
 
 #: lib/compression.c:128
 #, c-format
@@ -106,29 +107,29 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: Klarte ikkje køyra gzip %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: Intern gzip-feil: Las: «%s»"
+msgstr "%s: intern bzip2-feil: las: «%s»"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: Intern gzip-feil: Skreiv: «%s»"
+msgstr "%s: intern bzip2-feil: skreiv: «%s»"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: Intern gzip-feil: lese(%i) != skrive(%i)"
+msgstr "%s: intern bzip2-feil: lese(%i) != skrive(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: Klarte ikkje køyra gzip %s"
+msgstr "%s: klarte ikkje køyra bzip2 %s"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: Inga kopiløkkje i komprimering"
+msgstr "%s: komprimering"
 
 #: lib/database.c:125
 #, c-format
@@ -4319,22 +4320,22 @@ msgid "Help: "
 msgstr "Hjelp: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"Trykk ? for å visa hjelpemenyen, <mellomrom> for neste emne, <Enter> for å "
+"Trykk ? for å visa hjelpemeny, «.» for neste emne, <mellomrom> for å "
 "avslutta hjelpa."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
-msgstr "Help for følgjande emne er tilgjengeleg:"
+msgstr "Hjelp for følgjande emne er tilgjengeleg:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Trykk ein tast frå lista over, <enter>, «q» eller «Q» for å avslutta hjelp.\n"
-"  eller <mellomrom> for å lesa kvar hjelpeside etter kvarandre. "
+"Trykk ein tast frå lista over, <mellomrom> eller «q» for å avslutta hjelp.\n"
+"  eller «.» for å lese kvar hjelpeside etter kvarandre. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5615,10 +5616,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Velkomen til hovudpakkelista i dselect.\n"
 "\n"
@@ -5628,7 +5629,7 @@ msgstr ""
 "«+» og «-» kan du velja å installera eller fjerna pakkar eller grupper av \n"
 "pakkar. I utgangspunkter er linja «Alle pakkar» vald, slik at dei "
 "handlingane \n"
-"du gjer påverkar alle pakkane som høyrer til denne kategorien.\n"
+"du gjer påverkar alle pakkane som høyrer til under den markerte linja.\n"
 "\n"
 "Noko av det du vel kan føra til konfliktar eller problem med pakkekrav. I "
 "så \n"
@@ -5639,15 +5640,15 @@ msgstr ""
 "Du bør lesa oversikta over tastar og forklaringane til skjermbiletet. Det \n"
 "finst ein god del skjermhjelp som du kan visa ved å trykkja på «?».\n"
 "\n"
-"Når du er ferdig med å velja pakkar, trykkjer du Enter dersom du vil "
+"Når du er ferdig med å velja pakkar, trykkjer du <Enter> dersom du vil "
 "stadfesta \n"
-"endringane eller «Q» om du vil avslutta utan endringar. Ein siste kontroll "
+"endringane eller «X» om du vil avslutta utan endringar. Ein siste kontroll "
 "av \n"
 "konfliktar og pakkekrav vert utført. Her vil du òg få opp ei eiga liste "
 "ved \n"
 "problem.\n"
 "\n"
-"Trykk Enter for å avslutta hjelpa og gå til lista no.\n"
+"Trykk <mellomrom> for å avslutta hjelpa og gå til lista no.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5671,7 +5672,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Velkomen til hovudpakkelista i dselect.\n"
 "\n"
@@ -5684,9 +5685,9 @@ msgstr ""
 "Du bør lesa oversikta over tastar og forklaringane til skjermbiletet. Det \n"
 "finst ein god del skjermhjelp som du kan visa ved å trykkja på «?».\n"
 "\n"
-"Når du er ferdig med å studera lista, kan du avslutta med «Q» eller Enter.\n"
+"Når du er ferdig med å studera lista, kan du avslutta med «X» eller Enter.\n"
 "\n"
-"Trykk Enter for å avslutta hjelpa og gå til lista no.\n"
+"Trykk <mellomrom> for å avslutta hjelpa og gå til lista no.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5723,7 +5724,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Løysing av pakkekrav og konfliktar - introduksjon.\n"
@@ -5750,8 +5751,8 @@ msgstr ""
 "val, \n"
 "dersom du vil overstyra råda eller trur at programmet tek feil.\n"
 "\n"
-"Trykk Enter for å avslutta hjelpa og gå til lista. Hugs at du kan få hjelp \n"
-"med «?».\n"
+"Trykk <mellomrom> for å avslutta hjelpa og gå til lista. \n"
+"Hugs at du kan få hjelp med «?».\n"
 
 #: dselect/helpmsgs.cc:100
 msgid "Display, part 1: package listing and status chars"
