--- a/po/pl.po
+++ b/po/pl.po
@@ -1,14 +1,14 @@
 # dpkg.pl.po
 # Copyright (C) 1999 Free Software Foundation, Inc.
 # Piotr Roszatycki <dexter@debian.org>, 1999.
-# Bartosz Feñski <fenio@o2.pl>, 2004
+# Bartosz Feñski <fenio@debian.org>, 2004-2005
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.9.20\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-11-09 09:34+0100\n"
-"Last-Translator: Bartosz Fenski <fenio@o2.pl>\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-05 19:50+0100\n"
+"Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
@@ -4350,10 +4350,10 @@ msgid "Help: "
 msgstr "Pomoc: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"Naci¶nij ?, by skorzystaæ z pomocy, <spacjê>, by przej¶æ do nastêpnego\n"
-"tematu lub <enter>, by opu¶ciæ pomoc."
+"Naci¶nij ?, by skorzystaæ z pomocy, . by przej¶æ do nastêpnego tematu, \n"
+"<spacjê>, by opu¶ciæ pomoc."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4361,11 +4361,11 @@ msgstr "Informacje pomocy s± dostêpne pod nastêpuj±cymi tematami:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Wybierz klawisz z powy¿szej listy, <enter>, `q' lub `Q', by opu¶ciæ \n"
-"pomoc lub <spacjê>, by przegl±daæ po kolei strony pomocy. "
+"Wybierz klawisz z powy¿szej listy, <spacja> lub `q', by opu¶ciæ \n"
+"pomoc lub . (kropkê), by przegl±daæ po kolei strony pomocy. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5652,17 +5652,16 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
-"G³ówny ekran wyboru pakietów dselecta.\n"
+"Witaj w g³ównym ekranie wyboru pakietów dselecta.\n"
 "\n"
 "Uka¿e siê lista pakietów, które s± ju¿ zainstalowane lub mo¿na je dopiero\n"
-"zainstalowaæ. Po tej li¶cie mo¿na siê poruszaæ klawiszami kursora. "
-"Klawiszem\n"
-"`+' zaznaczyæ mo¿na pakiet do instalacji, klawiszem `-' do usuniêcia.\n"
+"zainstalowaæ. Po li¶cie mo¿na siê poruszaæ klawiszami kursora. Klawiszem\n"
+"`+' mo¿esz zaznaczyæ pakiet do instalacji, klawiszem `-' do usuniêcia.\n"
 "\n"
 "Pakiety mog± byæ zaznaczane pojedynczo lub grupami. Pocz±tkowo kursor "
 "znajduje\n"
@@ -5679,11 +5678,11 @@ msgstr ""
 "\n"
 "Je¿eli wybór pakietów zosta³ dokonany, nale¿y wcisn±æ Enter dla "
 "potwierdzenia\n"
-" zmian lub `Q', by wyj¶æ bez ich zapisania. Zostanie dokonane\n"
+" zmian lub `X', by wyj¶æ bez ich zapisania. Zostanie dokonane\n"
 " ostateczne sprawdzenie konfliktów i zale¿no¶ci - tu te¿ mo¿e pojawiæ siê\n"
 " lista pakietów.\n"
 "\n"
-"Wci¶nij Enter, aby opu¶ciæ ekran pomocy i przej¶æ do listy pakietów.\n"
+"Wci¶nij <spacjê>, aby opu¶ciæ ekran pomocy i przej¶æ do listy pakietów.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5707,9 +5706,9 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
-"G³ówny ekran wyboru pakietów dselecta.\n"
+"Witaj w g³ównym ekranie wyboru pakietów dselecta.\n"
 "\n"
 "Uka¿e siê lista pakietów, które s± ju¿ zainstalowane lub mo¿na je dopiero\n"
 "zainstalowaæ. Poniewa¿ nie posiadasz odpowiednich uprawnieñ do "
@@ -5718,14 +5717,12 @@ msgstr ""
 "poruszaæ klawiszami kursora (proszê przeczytaæ ekran pomocy z opisem\n"
 "klawiszy), obserwowaæ stan pakietów oraz czytaæ informacje o nich.\n"
 "\n"
-"Proszê zapoznaæ siê z dostêpn± pomoc± ! Klawisz `?' przywo³uje ekran "
-"pomocy.\n"
 "Proszê przeczytaæ listê klawiszy oraz wyja¶nienie wy¶wietlanych informacji.\n"
-"Pod klawiszem `?' dostêpna jest pomoc - proszê z niej korzystaæ.\n"
+"Wiele pomocy mo¿na uzyskaæ naciskaj±c `?' w ka¿dym momencie.\n"
 "\n"
 "Po zakoñczonym przegl±daniu listy pakietów, wci¶nij `Q' lub <enter>.\n"
 "\n"
-"Wci¶nij <enter>, aby opu¶ciæ ekran pomocy i przej¶æ do listy pakietów.\n"
+"Wci¶nij <spacjê>, aby opu¶ciæ ekran pomocy i przej¶æ do listy pakietów.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5762,7 +5759,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Rozwi±zywanie problemu zale¿no¶ci/konfliktu - wprowadzenie.\n"
@@ -5780,7 +5777,7 @@ msgstr ""
 "\n"
 "Zosta³ przygotowany zestaw pakietów `sugerowanych' wraz ze wstêpnymi\n"
 "ustawieniami dotycz±cymi ich instalacji, wiêc je¶li chcesz mo¿esz je\n"
-"zaakceptowaænaciskaj±c `Enter'. Mo¿esz anulowaæ problematyczne zmiany\n"
+"zaakceptowaæ naciskaj±c `Enter'. Mo¿esz anulowaæ problematyczne zmiany\n"
 "naciskaj±c `X', a tym samym powracaj±c do g³ównej listy.\n"
 "\n"
 "Mo¿esz równie¿ poruszaæ siê po li¶cie i zmieniaæ ustawienia tak, by\n"
@@ -5791,7 +5788,7 @@ msgstr ""
 "w przypadku gdyby¶ chcia³ zmieniæ moje zalecenia lub gdyby¶ my¶la³, ¿e\n"
 "pope³ni³em b³±d.\n"
 "\n"
-"Wci¶nij <enter>, aby opu¶ciæ ekran pomocy i przej¶æ do listy pakietów; "
+"Wci¶nij <spacjê>, aby opu¶ciæ ekran pomocy i przej¶æ do listy pakietów; "
 "pamiêtaj - wci¶nij `?', aby przywo³aæ ten ekran.\n"
 
 #: dselect/helpmsgs.cc:100
