--- a/po/sv.po
+++ b/po/sv.po
@@ -1,14 +1,14 @@
 # Swedish translation of dpkg
-# By Peter Karlsson <peterk@debian.org>, 1999-2004.
-# Copyright 1999-2004 Software in the Public Interest
+# By Peter Karlsson <peterk@debian.org>, 1999-2005.
+# Copyright 1999-2005 Software in the Public Interest
 # $Id: sv.po,v 1.59.2.9 2004/10/12 18:55:27 peterk Exp $
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.10\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-24 18:30+0100\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2005-01-01 23:52+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -58,29 +58,29 @@ msgid "Signal no.%d"
 msgstr "Signal nr %d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "internt gzip-fel: \"%s\""
+msgstr "%s: internt gzip-fel: \"%s\""
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "kunde inte exekvera gzip -dc"
+msgstr "%s: kunde inte exekvera gzip -dc"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "internt gzip-fel: \"%s\""
+msgstr "%s: internt bzip2-fel: \"%s\""
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "kunde inte exekvera gzip -dc"
+msgstr "%s: kunde inte exekvera bzip2 -dc"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: ingen komprimeringskopieslinga"
+msgstr "%s: dekomprimering"
 
 #: lib/compression.c:128
 #, c-format
@@ -103,29 +103,29 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: kunde inte exekvera gzip %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: internt gzip-fel: läsning: \"%s\""
+msgstr "%s: internt bzip2-fel: läsning: \"%s\""
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: internt gzip-fel: skrivning: \"%s\""
+msgstr "%s: internt bzip2-fel: skrivning: \"%s\""
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: internt gzip-fel: läs(%i) != skriv(%i)"
+msgstr "%s: internt bzip2-fel: läs(%i) != skriv(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: kunde inte exekvera gzip %s"
+msgstr "%s: kunde inte exekvera bzip2 %s"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: ingen komprimeringskopieslinga"
+msgstr "%s: komprimering"
 
 #: lib/database.c:125
 #, c-format
@@ -385,7 +385,7 @@ msgstr "fel i Config-Version-sträng \"%.250s\": %.250s"
 #, c-format
 msgid "value for `conffiles' has line starting with non-space `%c'"
 msgstr ""
-"värde för \"conffiles\" innehåller rad som börjar med icke-mellanslag \"%c\""
+"värde för \"conffiles\" innehåller rad som börjar med icke-blanksteg \"%c\""
 
 #: lib/fields.c:244
 #, c-format
@@ -447,8 +447,7 @@ msgid ""
 " version value starts with non-alphanumeric, suggest adding a space"
 msgstr ""
 "\"%s\"-fältet: referens till \"%.255s\":\n"
-" versionsvärdet börjar med icke-alfanumeriskt tecken, lägg till ett "
-"mellanslag"
+" versionsvärdet börjar med icke-alfanumeriskt tecken, lägg till ett blanksteg"
 
 #: lib/fields.c:381
 #, c-format
@@ -834,7 +833,7 @@ msgstr "versionssträng ej tom"
 
 #: lib/parsehelp.c:204
 msgid "version string has embedded spaces"
-msgstr "versionssträng har inbäddade mellanslag"
+msgstr "versionssträng har inbäddade blanksteg"
 
 #: lib/parsehelp.c:209
 msgid "epoch in version is not number"
@@ -4302,9 +4301,8 @@ msgid "Help: "
 msgstr "Hjälp: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
-msgstr ""
-"Tryck ? för hjälpmenyn, <mellanslag> för nästa ämne, <Enter> lämnar hjälpen."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
+msgstr "Tryck ? för hjälpmenyn, . för nästa ämne, <blanksteg> lämnar hjälpen."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4312,12 +4310,12 @@ msgstr "Hjälpinformation finns för följande ämnen:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Tryck en tangent från listan ovan, <Enter>, \"q\" eller \"Q\" avslutar "
+"Tryck en tangent från listan ovan, <blanksteg>, \"q\" eller \"Q\" avslutar "
 "hjälpen,\n"
-"  eller <mellanslag> för att läsa hjälpsidorna i sekvens. "
+"  eller \".\" (punkt) för att läsa hjälpsidorna i sekvens. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5543,7 +5541,7 @@ msgid ""
 msgstr ""
 "Rörelsetangenter: Nästa/Föregående, Början/Slut, Upp/Ner, Framåt/Bakåt:\n"
 "  Nedåtpil, j           Uppåtpil, k             flytta markeringsrad\n"
-"  N, PgDn, mellanslag   P, PgUp, backsteg       rulla listan en sida\n"
+"  N, PgDn, blanksteg    P, PgUp, backsteg       rulla listan en sida\n"
 "  ^n                    ^p                      rulla listan en rad\n"
 "  t, Home               e, End                  början/slutet av listan\n"
 "  u                     d                       rulla infotext en sida\n"
@@ -5596,10 +5594,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Välkomen till dselects huvudpaketlista.\n"
 "\n"
@@ -5623,11 +5621,11 @@ msgstr ""
 "helst för hjälp.\n"
 "\n"
 "När du är färdig med dina val trycker du <Enter> för att bekräfta dina val,\n"
-"eller \"Q\" för att avsluta utan att spara. En sista kontroll av konflikter\n"
+"eller \"X\" för att avsluta utan att spara. En sista kontroll av konflikter\n"
 "och beroenden kommer att göras, och även här kan du komma att se en "
 "dellista.\n"
 "\n"
-"Tryck <Enter> för att lämna hjälpen och gå till listan nu.\n"
+"Tryck <Blanksteg> för att lämna hjälpen och gå till listan nu.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5651,7 +5649,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Välkomen till dselects huvudpaketlista.\n"
 "\n"
@@ -5669,7 +5667,7 @@ msgstr ""
 "\n"
 "När du tittat färdigt trycker du \"Q\" eller <Enter> för att avsluta.\n"
 "\n"
-"Tryck <Enter> för att lämna hjälpen och gå till listan nu.\n"
+"Tryck <Blanksteg> för att lämna hjälpen och gå till listan nu.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5706,7 +5704,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Hantering av beroenden/konflikter - introduktion.\n"
@@ -5737,7 +5735,8 @@ msgstr ""
 "att tvinga mig att acceptera nuvarande inställningar, om du önskar gå förbi\n"
 "rekommendationen, eller tycker att programmet misstagit sig.\n"
 "\n"
-"Tryck <Enter> för att lämna hjälpen och komma till underlistan. Kom ihåg:\n"
+"Tryck <Blanksteg> för att lämna hjälpen och komma till underlistan. Kom "
+"ihåg:\n"
 "tryck \"?\" för hjälp.\n"
 
 #: dselect/helpmsgs.cc:100
@@ -5782,11 +5781,11 @@ msgstr ""
 "\"v\" för att få pratsamt läge) är dessa enkla bokstäver, från vänster till\n"
 "höger:\n"
 "\n"
-" Felflagga: mellanslag - inget fel (men paketet kan vara trasigt - se "
+" Felflagga: blanksteg  - inget fel (men paketet kan vara trasigt - se "
 "nedan)\n"
 "             \"R\"       - allvarligt fel vid installation, måste "
 "ominstalleras\n"
-" Tillstånd: mellanslag - ej installerat\n"
+" Tillstånd: blanksteg  - ej installerat\n"
 "                \"*\"    - installerat\n"
 "                \"-\"    - ej installerat, men konfigurationsfiler kvarstår\n"
 " paket i dessa { \"U\"   - uppackat, men ännu ej konfigurerat\n"
@@ -5938,7 +5937,7 @@ msgid ""
 msgstr ""
 "Rörelsetangenter: Nästa/Föregående, Början/Slut, Upp/Ner, Framåt/Bakåt:\n"
 "  n, nedåtpil, j        p, uppåtpil, k          flytta markeringsrad\n"
-"  N, PgDn, mellanslag   P, PgUp, backsteg       rulla listan en sida\n"
+"  N, PgDn, blanksteg    P, PgUp, backsteg       rulla listan en sida\n"
 "  ^n                    ^p                      rulla listan en rad\n"
 "  t, Home               e, End                  början/slutet av listan\n"
 "  u                     d                       rulla infotext en sida\n"
