--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
 "PO-Revision-Date: 2004-10-29 03:52+1300\n"
 "Last-Translator: Tchaikov <chaisave@263.com>\n"
 "Language-Team: Chinese (simplified) <i18n-translation@lists.linux.net.cn>\n"
@@ -4223,7 +4223,8 @@ msgid "Help: "
 msgstr "帮助："
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+#, fuzzy
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
 "摁 ? 可以弹出帮助菜单，用 <空格> 能进入下个主题，通过 <回车> 就能退出帮助界"
 "面。"
@@ -4233,9 +4234,10 @@ msgid "Help information is available under the following topics:"
 msgstr "您可获得有关下列主题的帮助信息："
 
 #: dselect/basecmds.cc:192
+#, fuzzy
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
 "请摁上面列表中所示的按键，用 <回车>、“q”或者“Q”来退出帮助界面，\n"
 "或者用 <空格> 来依次阅读帮助页面。"
@@ -5494,6 +5496,7 @@ msgid "Introduction to package selections"
 msgstr "软件包自选界面简介"
 
 #: dselect/helpmsgs.cc:33
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5518,10 +5521,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "欢迎来到 dselect 的软件包主列表界面。\n"
 "\n"
@@ -5550,6 +5553,7 @@ msgid "Introduction to read-only package list browser"
 msgstr "只读软件包列表浏览界面简介"
 
 #: dselect/helpmsgs.cc:57
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5567,7 +5571,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "欢迎来到 dselect 的软件包主列表界面。\n"
 "\n"
@@ -5588,6 +5592,7 @@ msgid "Introduction to conflict/dependency resolution sub-list"
 msgstr "用于解决冲突/依赖问题的子列表的简介"
 
 #: dselect/helpmsgs.cc:75
+#, fuzzy
 msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
@@ -5618,7 +5623,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "用于解决冲突/依赖问题的子列表的简介。\n"
