--- a/po/es.po
+++ b/po/es.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian dpkg 1.10.18\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-25 00:38+0200\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2004-12-31 12:07+0100\n"
 "Last-Translator: Javier Fernández-Sanguino <jfs@debian.org>\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -62,29 +62,29 @@ msgid "Signal no.%d"
 msgstr "Señal nº%d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "error interno de gzip: `%s'"
+msgstr "%s: error interno de gzip: `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "fallo al ejecutar gzip -dc"
+msgstr "%s: fallo al ejecutar gzip -dc"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "error interno de gzip: `%s'"
+msgstr "%s: error interno de bzip2: `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "fallo al ejecutar gzip -dc"
+msgstr "%s: fallo al ejecutar bzip2 -dc"
 
 #: lib/compression.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s: decompression"
-msgstr "%s: sin compresión"
+msgstr "%s: descompresión"
 
 #: lib/compression.c:128
 #, c-format
@@ -107,29 +107,29 @@ msgid "%s: failed to exec gzip %s"
 msgstr "%s: fallo al ejecutar gzip %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s: error interno de gzip: lectura: `%s'"
+msgstr "%s: error interno de bzip2: lectura: `%s'"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s: error interno de gzip: escritura `%s'"
+msgstr "%s: error interno de bzip2: escritura `%s'"
 
 #: lib/compression.c:184
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr "%s: error interno de gzip: lectura(%i) != escritura(%i)"
+msgstr "%s: error interno de bzip2: lectura(%i) != escritura(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s: fallo al ejecutar gzip %s"
+msgstr "%s: fallo al ejecutar bzip2 %s"
 
 #: lib/compression.c:203
-#, fuzzy, c-format
+#, c-format
 msgid "%s: compression"
-msgstr "%s: sin compresión"
+msgstr "%s: compresión"
 
 #: lib/database.c:125
 #, c-format
@@ -4516,9 +4516,8 @@ msgid "Help: "
 msgstr "Ayuda: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
-msgstr ""
-"Pulse ? para el menú, <espacio> para el tema siguiente, <intro> para salir."
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
+msgstr "Pulse ? para el menú, . para el tema siguiente, <intro> para salir."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -4526,12 +4525,12 @@ msgstr "La información de ayuda está disponible bajo los siguientes temas:"
 
 #: dselect/basecmds.cc:192
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
 "Pulse una tecla de la lista anterior, <intro>, `q' o `Q' para salir de la "
 "ayuda,\n"
-" o <espacio> para leer cada una de las páginas de ayuda. "
+" o `.' (punto) para leer cada una de las páginas de ayuda. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -5847,10 +5846,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Bienvenido al listado de paquetes principal de dselect.\n"
 "\n"
@@ -5872,11 +5871,11 @@ msgstr ""
 "para obtener ayuda.\n"
 "\n"
 "Cuando haya terminado de seleccionar paquetes, pulso <intro> para confirmar\n"
-"los cambios, o `Q' para salir sin guardar los cambios. Se efectuará una\n"
+"los cambios, o `X' para salir sin guardar los cambios. Se efectuará una\n"
 "comprobación final de los conflictos y dependencias, aquí también puede\n"
 "que se le muestre una sublista.\n"
 "\n"
-"Pulse <intro> para salir de la ayuda y entrar en la lista ahora.\n"
+"Pulse <espacio> para salir de la ayuda y entrar en la lista ahora.\n"
 
 #: dselect/helpmsgs.cc:57
 msgid "Introduction to read-only package list browser"
@@ -5900,7 +5899,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "Bienvenido al listado de paquetes principal de dselect.\n"
 "\n"
@@ -5919,7 +5918,7 @@ msgstr ""
 "\n"
 "Cuando haya terminado de navegar pulse `Q' o <intro> para salir.\n"
 "\n"
-"Pulse <intro> para abandonar la ayuda y entrar en la lista.\n"
+"Pulse <espacio> para abandonar la ayuda y entrar en la lista.\n"
 
 #: dselect/helpmsgs.cc:75
 msgid "Introduction to conflict/dependency resolution sub-list"
@@ -5956,7 +5955,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "Resolución de dependencia/conflicto -- Introducción.\n"
@@ -5990,7 +5989,7 @@ msgstr ""
 "mostrada en caso de que desee descartar una recomendación o piense que el\n"
 "programa se ha equivocado.\n"
 "\n"
-"Pulse <Intro> para abandonar la ayuda y entrar en la sublista;\n"
+"Pulse <espacio> para abandonar la ayuda y entrar en la sublista;\n"
 "recuerde: pulse `?' para la ayuda.\n"
 
 #: dselect/helpmsgs.cc:100
