--- a/po/ko.po
+++ b/po/ko.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.10.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-11 20:10+0000\n"
-"PO-Revision-Date: 2004-10-25 08:56+0900\n"
+"POT-Creation-Date: 2005-01-11 16:56+0000\n"
+"PO-Revision-Date: 2004-11-21 03:52+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <cwryu@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,74 +57,74 @@ msgid "Signal no.%d"
 msgstr "시그널 %d번"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "%s:%d: 내부 오류 `%s' 발생했습니다\n"
+msgstr "%s: 내부 gzip 오류: `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "gzip -dc를 닫는 데 실패했습니다"
+msgstr "%s: gzip -dc 실행 실패"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "%s:%d: 내부 오류 `%s' 발생했습니다\n"
+msgstr "%s: 내부 bzip2 오류: `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "gzip -dc를 닫는 데 실패했습니다"
+msgstr "%s: bzip2 -dc 실행 실패"
 
 #: lib/compression.c:94
 #, c-format
 msgid "%s: decompression"
-msgstr ""
+msgstr "%s: 압축 풀기"
 
 #: lib/compression.c:128
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: read: `%s'"
-msgstr "%s:%d: 내부 오류 `%s' 발생했습니다\n"
+msgstr "%s: 내부 gzip 오류: 읽기: `%s'"
 
 #: lib/compression.c:138
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: write: `%s'"
-msgstr "%s:%d: 내부 오류 `%s' 발생했습니다\n"
+msgstr "%s: 내부 gzip 오류: 쓰기 `%s'"
 
 #: lib/compression.c:141
 #, c-format
 msgid "%s: internal gzip error: read(%i) != write(%i)"
-msgstr ""
+msgstr "%s: 내부 gzip 오류: 읽기(%i) != 쓰기(%i)"
 
 #: lib/compression.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip %s"
-msgstr "%s 실행이 실패했습니다"
+msgstr "%s: gzip 실행 실패: %s"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s:%d: 내부 오류 `%s' 발생했습니다\n"
+msgstr "%s: 내부 bzip2 오류: 읽기: `%s'"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s:%d: 내부 오류 `%s' 발생했습니다\n"
+msgstr "%s: 내부 bzip2 오류: 쓰기: `%s'"
 
 #: lib/compression.c:184
 #, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr ""
+msgstr "%s: 내부 bzip2 오류: 읽기(%i) != 쓰기(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "%s 실행이 실패했습니다"
+msgstr "%s: bzip2 %s 실행 실패"
 
 #: lib/compression.c:203
 #, c-format
 msgid "%s: compression"
-msgstr ""
+msgstr "%s: 압축"
 
 #: lib/database.c:125
 #, c-format
@@ -4304,7 +4304,8 @@ msgid "Help: "
 msgstr "도움말: "
 
 #: dselect/basecmds.cc:177
-msgid "Press ? for help menu, <space> for next topic, <enter> to exit help."
+#, fuzzy
+msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
 "도움말 메뉴는 ?, 다음 주제는 <스페이스>, 도움말을 나가려면 <enter>를 누르십시"
 "오."
@@ -4314,9 +4315,10 @@ msgid "Help information is available under the following topics:"
 msgstr "다음 주제에 대한 도움말 정보가 있습니다:"
 
 #: dselect/basecmds.cc:192
+#, fuzzy
 msgid ""
-"Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
-"  or <space> to read each help page in turn. "
+"Press a key from the list above, <space> or `q' to exit help,\n"
+"  or `.' (full stop) to read each help page in turn. "
 msgstr ""
 "위의 목록에 따라 키를 누르십시오. 도움말을 나가려면 <enter>, `q', 혹은 `Q',\n"
 "  각 도움말 페이지를 순서대로 읽으려면 <스페이스> 키를 누르십시오."
@@ -5584,6 +5586,7 @@ msgid "Introduction to package selections"
 msgstr "꾸러미 선택에 관한 안내"
 
 #: dselect/helpmsgs.cc:33
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5608,10 +5611,10 @@ msgid ""
 "\n"
 "When you have finished selecting packages, press <enter> to confirm "
 "changes,\n"
-"or `Q' to quit without saving changes. A final check on conflicts and\n"
+"or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "주요 꾸러미 목록입니다.\n"
 "\n"
@@ -5641,6 +5644,7 @@ msgid "Introduction to read-only package list browser"
 msgstr "꾸러미 목록 읽기 전용 브라우저 소개"
 
 #: dselect/helpmsgs.cc:57
+#, fuzzy
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
@@ -5658,7 +5662,7 @@ msgid ""
 "\n"
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
-"Press <enter> to leave help and enter the list now.\n"
+"Press <space> to leave help and enter the list now.\n"
 msgstr ""
 "주 꾸러미 목록입니다.\n"
 "\n"
@@ -5680,6 +5684,7 @@ msgid "Introduction to conflict/dependency resolution sub-list"
 msgstr "충돌/의존성 해결 하위 목록 소개"
 
 #: dselect/helpmsgs.cc:75
+#, fuzzy
 msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
@@ -5710,7 +5715,7 @@ msgid ""
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <enter> to leave help and enter the sub-list; remember: press `?' for "
+"Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
 msgstr ""
 "의존성/충돌 해결 - 소개.\n"
